# LivingSpheres

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
include/LivingSpheres/: cells.h  grid.h  simulator.cpp  simulator.h  util.h
tests/: CMakeLists.txt  test_cell_movements_due_external_forces.cpp  test_freeze.cpp  test_grid.cpp  test_themal.cpp
